# wireguard-zk-handshake

./: .gitignore  README.md  README2.md  Vagrantfile  build.sh  dmesg.sh  handshake.sh  pending.sh
docker/: Dockerfile  build.sh  docker-compose.yml
run/: test_generic.sh  vagrant.md  wg_vm_left.sh  wg_vm_right.sh
userspace/tools/: wg_pk_to_edwards.rs
userspace/wg-zk-daemon/: .env  Cargo.toml  README.md
userspace/wg-zk-daemon/src/: main.rs  netlink.rs
vagrant/: 01-install-kernel.sh  02-load-module.sh  03-client.sh  03-gateway.sh  04-test.sh
wireguard-6.8/: Makefile  device.c  device.h  main.c  messages.h  noise.c  noise.h  receive.c  wgzk_genl.c  wgzk_genl.h  zk_debugfs.c  zk_debugfs.h  zk_pending.c  zk_pending.h  zk_procfs.c  zk_procfs.h  zk_proof.c  zk_proof.h
