[package]
name = "wg-zk-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["default","digest"] }
sha2 = "0.10.9"
hex = "0.4.3"
neli = { version = "0.7.1", features = ["sync","default","netfilter","tokio","async","parking_lot"] }
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
